--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -7,8 +7,8 @@
         <import type="android.view.View"/>
 
         <variable
-            name="menu"
-            type="com.asgar.tanggapbencana.activity.Menu"/>
+            name="vm"
+            type="com.asgar.tanggapbencana.model.RowItemVM"/>
     </data>
 
     <android.support.v7.widget.CardView
