--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -12,11 +12,11 @@
     </data>
 
     <android.support.design.widget.CoordinatorLayout
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
+        android:background="@color/white"
         android:layout_margin="4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -27,9 +27,11 @@
             android:orientation="vertical">
 
             <LinearLayout
+                android:gravity="center_vertical"
                 android:padding="8dp"
+                android:layout_weight="1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="0dp">
 
                 <ImageView
                     app:srcCompat="@drawable/ic_location_on_18dp"
@@ -37,16 +39,11 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:textStyle="bold"
+                    android:paddingLeft="4dp"
                     tools:text="Nama lokasi"
                     android:text="@{vm.bLokasi}"
-                    android:layout_weight="1"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content" />
-
-                <TextView
-                    tools:text="Tanggal"
-                    android:text="@{vm.bTanggal}"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
             </LinearLayout>
@@ -55,33 +52,43 @@
                 android:padding="8dp"
                 android:text="@{vm.bDesKorban}"
                 tools:text="Deskripsi Korban : "
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
             <TextView
                 android:padding="8dp"
                 android:text="@{vm.bDesKebutuhan}"
                 tools:text="Deskripsi Kebutuhan : "
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
             <TextView
                 android:padding="8dp"
                 android:text="@{vm.bKeterangan}"
                 tools:text="Keterangan : "
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-            <View
-                android:background="@color/divider"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"/>
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:text="@{vm.bRelawan}"
                 android:padding="8dp"
                 tools:text="Relawan : "
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <View
+                android:paddingLeft="2dp"
+                android:paddingRight="2dp"
+                android:background="@color/divider"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"/>
+
+            <TextView
+                android:padding="8dp"
+                android:gravity="right"
+                tools:text="Tanggal"
+                android:text="@{vm.bTanggal}"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
