--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="divider">#8b8b8b</color>
+    <color name="divider">#b1b1b1</color>
+    <color name="grey">#d7d7d7</color>
+    <color name="white">#ffffff</color>
 </resources>
