--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -37,12 +37,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v4.widget.NestedScrollView
-            android:id="@+id/view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true">
-
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv"
             android:background="@color/grey"
@@ -51,37 +45,6 @@
             app:adapter="@{vm.bAdapter}"
             app:layoutManager="@{vm.bLayoutManager}"
             tools:listitem="@layout/row_item" />
-
-        </android.support.v4.widget.NestedScrollView>
-
-        <!--<TextView-->
-            <!--android:id="@+id/btn_tmb_feed"-->
-            <!--android:padding="16dp"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="0dp"-->
-            <!--android:layout_weight="1"-->
-            <!--android:gravity="center"-->
-            <!--android:textStyle="bold"-->
-            <!--android:textSize="24dp"-->
-            <!--android:text="Tambah \n Feed"-->
-            <!--android:onClick="@{menu.onClickFeed}"/>-->
-
-        <!--<View-->
-            <!--android:padding="16dp"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="2dp"-->
-            <!--android:background="#000"/>-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/btn_tmb_update"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="0dp"-->
-            <!--android:layout_weight="1"-->
-            <!--android:gravity="center"-->
-            <!--android:textStyle="bold"-->
-            <!--android:textSize="24dp"-->
-            <!--android:text="Tambah \n Update"-->
-            <!--android:onClick="@{menu.onClickUpdate}"/>-->
 
     </RelativeLayout>
 
@@ -99,6 +62,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:textStyle="bold"
                     android:padding="8dp"
                     android:text="Feed"
                     android:layout_width="wrap_content"
@@ -114,7 +78,7 @@
                     android:onClick="@{vm.onClickFeed}"
                     app:layout_anchorGravity="bottom|right|end"
                     tools:visibility="visible"
-                    app:srcCompat="@drawable/ic_add_24dp" />
+                    app:srcCompat="@drawable/ic_edit_24dp" />
 
             </LinearLayout>
 
@@ -125,6 +89,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:textStyle="bold"
                     android:padding="8dp"
                     android:text="Update"
                     android:layout_width="wrap_content"
@@ -140,7 +105,7 @@
                     android:onClick="@{vm.onClickUpdate}"
                     app:layout_anchorGravity="bottom|right|end"
                     tools:visibility="visible"
-                    app:srcCompat="@drawable/ic_add_24dp" />
+                    app:srcCompat="@drawable/ic_edit_24dp" />
 
             </LinearLayout>
 
