--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,19 +39,30 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:orientation="vertical">
+
+        <TextView
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Data Relawan"
+            android:textStyle="bold"
+            android:textSize="24dp"
+            android:padding="24dp"/>
 
         <LinearLayout
             android:id="@+id/activity_main"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="8dp">
 
             <android.support.design.widget.TextInputLayout
+                android:padding="8dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" >
                 <android.support.design.widget.TextInputEditText
-                    tools:text="haha"
                     android:id="@+id/namaRelawan"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -61,24 +72,27 @@
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
+                android:padding="8dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_height="wrap_content">
                 <android.support.design.widget.TextInputEditText
-                    tools:text="haha"
                     android:id="@+id/kontakRelawan"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Kontak"
-                    android:inputType="text"
+                    android:inputType="phone"
                     android:lines="1"/>
             </android.support.design.widget.TextInputLayout>
 
             <Button
-                android:text="Submit"
+                android:padding="8dp"
+                android:hint="Submit"
+                android:textStyle="bold"
+                android:textColorHint="#fff"
                 android:id="@+id/btn_submit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#F44336"
                 android:onClick="@{regis.submit}"/>
         </LinearLayout>
     </LinearLayout>
