--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -37,7 +37,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <Button
+            android:onClick="@{vm.onClickReload}"
+            android:visibility="@{vm.isFail ? View.VISIBLE : View.GONE}"
+            android:layout_centerInParent="true"
+            android:text="Coba Lagi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
         <android.support.v7.widget.RecyclerView
+            android:visibility="@{vm.isFail ? View.GONE : View.VISIBLE}"
             android:id="@+id/rv"
             android:background="@color/grey"
             android:layout_width="match_parent"
